--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ p {
 }
 
 .introducao::before {
-  content: '';
+  content: "";
   width: 60px;
   height: 4px;
   background: #e21;
@@ -112,7 +112,7 @@ p {
   text-align: right;
   padding: 40px;
   align-self: center;
-  background-image: url('./img/onda.svg');
+  background-image: url("./img/onda.svg");
 }
 
 .vantagens {
@@ -146,4 +146,52 @@ p {
   text-align: center;
   padding: 40px;
   box-sizing: border-box;
+}
+
+.introducao-cover img {
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 1000px) {
+  .conteudo-vantagem{
+    grid-template-columns: 1fr;
+  }
+  .subtitulo{
+    text-align: center;
+  }
+}
+
+
+@media (max-width: 600px) {
+
+  body{
+    gap: 30px;
+    margin-top: 20px;
+  }
+  .header{
+    gap: 30px;
+  }
+
+  .conteudo {
+    grid-template-columns: 1fr;
+  }
+
+  .introducao{
+    text-align: left;
+    justify-items: start;
+  }
+  .introducao::before{
+    display: none;
+  }
+
+  .subtitulo{
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .subtitulo{
+    font-size: 2rem;
+  }
 }
